// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction table account renders correct snapshot 1`] = `
<div class="mx-auto v-card v-sheet theme--light elevation-0">
  <div class="v-data-table elevation-1 account-table v-data-table--has-top theme--light" id="accountsTable">
    <header class="v-sheet theme--light v-toolbar v-toolbar--flat white" style="height: 64px;">
      <div class="v-toolbar__content" style="height: 64px;"><span class="text-h3">Accounts</span>
        <div class="spacer"></div>
        <div role="dialog" class="v-dialog__container">
          <!---->
        </div> <button type="button" class="mb-2 v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--dark v-size--default accent" id="addAccountBtn"><span class="v-btn__content">
          Add Account
        </span></button>
      </div>
    </header>
    <hr role="separator" aria-orientation="horizontal" class="pb-4 v-divider theme--light">
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Name" class="text-left"><span>Name</span></th>
            <th role="columnheader" scope="col" aria-label="Type: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Type</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="On Budget: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>On Budget</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Invert Balance: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Invert Balance</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Closed: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Closed</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Actions" class="text-start"><span>Actions</span></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-left">Savings</td>
            <td class="text-start">CHECKING</td>
            <td class="text-start">true</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
          <tr class="">
            <td class="text-left">Chase</td>
            <td class="text-start">CREDIT</td>
            <td class="text-start">true</td>
            <td class="text-start">true</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
          <tr class="">
            <td class="text-left">Vanguard</td>
            <td class="text-start">INVESTMENT</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`transaction table submitting add account form 1`] = `
<div class="mx-auto v-card v-sheet theme--light elevation-0">
  <div class="v-data-table elevation-1 account-table v-data-table--has-top theme--light" id="accountsTable">
    <header class="v-sheet theme--light v-toolbar v-toolbar--flat white" style="height: 64px;">
      <div class="v-toolbar__content" style="height: 64px;"><span class="text-h3">Accounts</span>
        <div class="spacer"></div>
        <div role="dialog" class="v-dialog__container">
          <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
            <transition-stub name="dialog-transition" appear="true">
              <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 500px;">
                <form novalidate="novalidate" class="v-form">
                  <div class="v-card v-sheet theme--light">
                    <div class="v-card__title primary white--text pb-4"><span class="title"><span>Edit Account</span></span></div>
                    <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                    <div class="v-card__text pb-0">
                      <form novalidate="novalidate" class="v-form">
                        <div class="row">
                          <div class="col col-12">
                            <div class="v-input theme--light v-text-field">
                              <div class="v-input__control">
                                <div class="v-input__slot">
                                  <div class="v-text-field__slot"><label for="input-131" class="v-label theme--light" style="left: 0px; position: absolute;">Account Name</label><input data-cy="account-name" id="input-131" type="text"></div>
                                </div>
                                <div class="v-text-field__details">
                                  <div class="v-messages theme--light">
                                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div class="col col-4">
                            <div class="v-input theme--light v-text-field v-select">
                              <div class="v-input__control">
                                <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-134" class="v-input__slot">
                                  <div class="v-select__slot"><label for="input-134" class="v-label theme--light" style="left: 0px; position: absolute;">Type</label>
                                    <div class="v-select__selections"><input data-cy="account-type" id="input-134" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
                                    <div class="v-input__append-inner">
                                      <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                                    </div><input type="hidden">
                                  </div>
                                  <div class="v-menu">
                                    <!---->
                                  </div>
                                </div>
                                <div class="v-text-field__details">
                                  <div class="v-messages theme--light">
                                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div class="col col-4">
                            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
                              <div class="v-input__control">
                                <div class="v-input__slot">
                                  <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-139" role="switch" type="checkbox" aria-disabled="false" data-cy="account-on-budget" value="">
                                    <div class="v-input--selection-controls__ripple primary--text"></div>
                                    <div class="v-input--switch__track theme--light primary--text"></div>
                                    <div class="v-input--switch__thumb theme--light primary--text">
                                      <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                                    </div>
                                  </div><label for="input-139" class="v-label theme--light" style="left: 0px; position: relative;">On Budget?</label>
                                </div>
                                <div class="v-messages theme--light primary--text">
                                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div class="col col-4">
                            <div class="v-input theme--light v-input--selection-controls v-input--switch">
                              <div class="v-input__control">
                                <div class="v-input__slot">
                                  <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-143" role="switch" type="checkbox" aria-disabled="false" value="">
                                    <div class="v-input--selection-controls__ripple"></div>
                                    <div class="v-input--switch__track theme--light"></div>
                                    <div class="v-input--switch__thumb theme--light">
                                      <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                                    </div>
                                  </div><label for="input-143" class="v-label theme--light" style="left: 0px; position: relative;">Invert Balance</label>
                                </div>
                                <div class="v-messages theme--light">
                                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                </div>
                              </div>
                            </div> <span>(generally for credit card accounts)</span>
                          </div>
                          <div class="col col-12">
                            <div class="v-input v-textarea v-textarea--auto-grow v-textarea--no-resize v-input--dense theme--light v-text-field">
                              <div class="v-input__control">
                                <div class="v-input__slot">
                                  <div class="v-text-field__slot"><label for="input-147" class="v-label theme--light" style="left: 0px; position: absolute;">Notes</label><textarea data-cy="account-notes" id="input-147" rows="3"></textarea></div>
                                </div>
                                <div class="v-text-field__details">
                                  <div class="v-messages theme--light">
                                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div class="col-sm-6 col-md-4 col-12">
                            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--prefix">
                              <div class="v-input__control">
                                <div class="v-input__slot">
                                  <div class="v-text-field__slot"><label for="input-150" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Starting Balance</label>
                                    <div class="v-text-field__prefix">$</div><input data-cy="account-starting-balance" id="input-150" type="text">
                                  </div>
                                </div>
                                <div class="v-text-field__details">
                                  <div class="v-messages theme--light">
                                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </form>
                    </div>
                    <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                    <div class="v-card__actions  white--text">
                      <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default" data-cy="account-cancel"><span class="v-btn__content">
        Cancel
      </span></button> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default accent" id="saveAccountBtn"><span class="v-btn__content">
        Save
      </span></button>
                    </div>
                  </div>
                </form>
              </div>
            </transition-stub>
          </div>
        </div> <button type="button" class="mb-2 v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--dark v-size--default accent" id="addAccountBtn"><span class="v-btn__content">
          Add Account
        </span></button>
      </div>
    </header>
    <hr role="separator" aria-orientation="horizontal" class="pb-4 v-divider theme--light">
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Name" class="text-left"><span>Name</span></th>
            <th role="columnheader" scope="col" aria-label="Type: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Type</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="On Budget: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>On Budget</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Invert Balance: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Invert Balance</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Closed: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Closed</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Actions" class="text-start"><span>Actions</span></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-left">Savings</td>
            <td class="text-start">CHECKING</td>
            <td class="text-start">true</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
          <tr class="">
            <td class="text-left">Chase</td>
            <td class="text-start">CREDIT</td>
            <td class="text-start">true</td>
            <td class="text-start">true</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
          <tr class="">
            <td class="text-left">Vanguard</td>
            <td class="text-start">INVESTMENT</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">false</td>
            <td class="text-start">
              <div class="crud-actions"><button type="button" icon="" class="v-icon notranslate v-icon--link material-icons theme--dark primary--text">edit</button> <button type="button" icon="" class="v-icon notranslate ml-1 v-icon--link material-icons theme--dark accent--text">delete</button></div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
